--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
   <i class="fa-solid fas fa-plane fa-10x" ></i>
+  <a href="login.html"><input type="button" value="로그인"></a>
+  <a href="joining.html"><input type="button" value="회원가입"></a>
+
+
 </body>
 </html>
