--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <i class="fa-solid fas fa-plane fa-10x" ></i>
-  <a href="login.html"><input type="button" value="로그인"></a>
-  <a href="joining.html"><input type="button" value="회원가입"></a>
+  <a href="/main/login.html"><input type="button" value="로그인"></a>
+  <a href="/main/joinning.html"><input type="button" value="회원가입"></a>
 
 
 </body>
