--- a/main/joinning.html
+++ b/main/joinning.html
@@ -4,8 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-</head>
-<body>
-  
-</body>
+<style>
+      #container {
+        width:600px;
+        margin:10px auto;
+      }
+    </style>
+  </head>
+  <body> 
+    <div id="container">
+      <h1>회원 가입</h1>
+      <form action="joinging_completed.html">
+        <fieldset>
+          <legend>사용자 정보</legend>    
+          <ul>
+            <li>
+              <label for="uname">이름</label>
+              <input type="text" id="uname" required> 
+            </li>
+            <li>
+              <label for="umail">이메일</label>
+              <input type="email" id="umail" required> 
+            </li>
+            <li>
+              <label for="pwd1">비밀번호</label>
+              <input type="password" id="pwd1" required> 
+            </li>        
+            <li>
+              <label for="pw2">비밀번호 확인</label>
+              <input type="password" id="pwd2" required> 
+            </li>
+          </ul>      
+        </fieldset>
+          <input type="submit" value="회원가입">
+          <a href="/index.html"><input type="button" value="취소"></a>
+
+
+
+
+
+          
+        </div>
+      </form>
+    </div>           
+  </body>
 </html>
