main(nav&기본틀)_min

--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>부산투어</title>
   <script src="https://kit.fontawesome.com/6615e6738c.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <i class="fa-solid fas fa-plane fa-10x" ></i>
+  <nav class="header">
+    <ol>
+      <li class="menu1"><i class="fas fa-plane-departure"></i> Busan Tour </li>
+      <li class="menu2">
+        <input type="search" size="40px" name="text" id="" placeholder="search">
+        <input type="submit" value="🔍">
+      </li>
+      <li class="menu3"><i class="fas fa-user"></i></li>
+    </ol>
+  </nav>
+
+  <iframe class="video" src="https://www.youtube.com/embed/NaEqgQhp2Zo?si=-HBRlhE593iydicB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" allowfullscreen></iframe>
+
+  <div class="img">
+    <p class="img01"><img src="img/spring_main.jpg" alt=""> </p>
+    <p class="p01">부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+    <p class="img02"><img src="img/summer_main.jpg" alt="">설명</p>
+    <p class="img01"><img src="img/autumn_main.jpg" alt="">설명</p>
+    <p class="img02"><img src="img/winter_main.jpg" alt="">설명</p>
+  </div>
+
+  <footer>`
+    <hr>
+  </footer>
+  
 </body>
 </html>
