--- a/main/joinning.html
+++ b/main/joinning.html
@@ -20,19 +20,19 @@
           <ul>
             <li>
               <label for="uname">이름</label>
-              <input type="text" id="uname" required> 
+              <p><input type="text" id="uname" required placeholder="이름을 입력해주세요"> </p>
             </li>
             <li>
               <label for="umail">이메일</label>
-              <input type="email" id="umail" required> 
+              <p><input type="email" id="umail" required placeholder="ID@example.com"> </p>
             </li>
             <li>
               <label for="pwd1">비밀번호</label>
-              <input type="password" id="pwd1" required> 
+             <p> <input type="password" id="pwd1" required placeholder="영문,숫자,특수문자 조합 8~15자 "> </p>
             </li>        
             <li>
               <label for="pw2">비밀번호 확인</label>
-              <input type="password" id="pwd2" required> 
+              <p><input type="password" id="pwd2" required> </p>
             </li>
           </ul>      
         </fieldset>
