joining & joinging completed_im

--- a/main/joinging_completed.html
+++ b/main/joinging_completed.html
@@ -64,7 +64,7 @@ button {
 </head>
 <body>
 
-  <h1>회원 가입을 진심으로 축하 드립니다<div class=""></div></h1>
+  <h1>회원 가입을 진심으로 축하 드립니다</h1>
   
 </body>
 </html>
