joining & joinging completed_im2

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://kit.fontawesome.com/6615e6738c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <i class="fa-solid fas fa-plane fa-10x" ></i>
-  <a href="/main/login.html"><input type="button" value="로그인"></a>
-  <a href="/main/joinning.html"><input type="button" value="회원가입"></a>
+
+  <!-- <a href="/main/login.html"><input type="button" value="로그인"></a>
+  <a href="/main/joinning.html"><input type="button" value="회원가입"></a> -->
 
 
 </body>
