--- a/main/joinning.html
+++ b/main/joinning.html
@@ -29,19 +29,19 @@
           <ul>
             <li>
               <label for="uname">이름</label>
-              <p><input type="text" id="uname" required placeholder="이름을 입력해주세요."> </p>
+              <div><input type="text" id="uname" required placeholder="이름을 입력해주세요."> </div>
             </li>
             <li>
               <label for="umail">이메일</label>
-              <p><input type="email" id="umail" required placeholder="ID@example.com"> </p>
+              <div><input type="email" id="umail" required placeholder="ID@example.com"> </div>
             </li>
             <li>
               <label for="pwd1">비밀번호</label>
-             <p> <input type="password" id="pwd1" required placeholder="영문,숫자 조합 8~15자 "> </p>
+             <div> <input type="password" id="pwd1" required placeholder="영문,숫자 조합 8~15자 "> </div>
             </li>        
             <li>
               <label for="pw2">비밀번호 확인</label>
-              <p><input type="password" id="pwd2" required placeholder="비밀번호를 한번 더 입력해주세요."> </p>
+              <div><input type="password" id="pwd2" required placeholder="비밀번호를 한번 더 입력해주세요."> </div>
             </li>
           </ul>      
         </fieldset>
