--- a/main/login.html
+++ b/main/login.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Login Form</title>
+    <style>
+      * {
+
+margin:0;
+
+box-sizing: border-box;
+
+}
+
+body {      
+
+background:url('images/bg5.jpg') no-repeat left top fixed;
+
+background-size:cover;
+
+display: flex;
+
+justify-content: center;
+
+align-items: center;
+
+min-height:100vh;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        body {
+            background-color: #1BBC9B;
+        }
+
+        div {
+            margin: auto;
+            width: 300px;
+            background-color: #EEEFF1;
+            border-radius: 5px;
+            text-align: center;
+            padding: 20px;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border-radius: 5px;
+            border: none;
+        }
+
+        .in {
+            margin-bottom: 10px;
+        }
+
+        #btn {
+            background-color: #1BBC9B;
+            margin-bottom: 30px;
+            color: white;
+        }
+
+        a {
+            text-decoration: none;
+            color: #9B9B9B;
+            font-size: 12px;
+        }
+    </style>
 </head>
+
 <body>
-  
+    <div>
+        <form action="">
+            <input type="text" placeholder="아이디" class="in">
+            <input type="password" placeholder="비밀번호" class="in">
+            <input type="submit" id="btn" value="로그인"><br>
+        </form>
+        <a href="#none">비밀번호를 잊어버리셨나요?</a>
+    </div>
 </body>
+
 </html>
