--- a/main/login.html
+++ b/main/login.html
@@ -83,7 +83,7 @@ min-height:100vh;
 
 <body>
     <div>
-        <form action="">
+        <form action="/index.html">
             <input type="text" placeholder="아이디" class="in">
             <input type="password" placeholder="비밀번호" class="in">
             <input type="submit" id="btn" value="로그인"><br>
