--- a/season/season.html
+++ b/season/season.html
@@ -60,7 +60,7 @@
           <span class="content-text1">
             송도해상케이블카는 케이블카 뿐만 아니라 거대한 공룔들이 소리를 내며 움직이는 다이노 어드벤처와 동화속 어린왕자를 주인으로 한 어린왕자 테마존, 국내 최초의 케이블카 뮤지엄 송도도펠마이어월드 등 다양한 테마시설을 함께 체험할 수 있습니다.
           </span>
-          <a href="#">패키지 예약하기</a>
+          <a href="booking.html">패키지 예약하기</a>
         </div>
       </div>
   
@@ -89,7 +89,7 @@
           <span class="content-text2">
             감천의 이런 특색과 역사적 가치를 살리기 위해 지역 예술인들과 마을 주민들이 모여 시작한 프로젝트는 감천문화마음 만들기 사업의 디딤돌이 되었으며 이 사업을 시작으로 각종 공모사업을 유치하여 2019년에는 308만여명이 방문하는 명소가 되었습니다. 감천문화마을이 만들어지기까지 함께 고민하고 힘써 주신 마을주민들과 마음만들기 계획가 및 활동가, 예술가들, 그리고 구청 및 동주민센터 공무원들이 노력중입니다.
           </span>
-          <a href="#">패키지 예약하기</a>
+          <a href="booking.html">패키지 예약하기</a>
         </div>
       </div>
     </div>
@@ -115,7 +115,7 @@
           <span class="content-text3">
             광안리 근처에는 바다 전망을 가진 카페나 식당이 많이 있으며 민락횟집거리를 포함하여 백사장 끝에 위치한 회타운에서 싱싱한 활어회와 제철 해산물을 맛볼 수 있으며 어두운 밤에는 불을 밝힌 간판과 네온사인, 반짝이는 광안대교의 조명까지 낭만적인 분위기를 느낄 수 있습니다.
           </span>
-          <a href="#">패키지 예약하기</a>
+          <a href="booking.html">패키지 예약하기</a>
         </div>
       </div>
   
