--- a/season/booking.html
+++ b/season/booking.html
@@ -3,41 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>booking</title>
+  <title>b</title>
   <link rel="stylesheet" href="css/booking.css">
 </head>
 <body>
-  <div class="booking_top_img">
+  <div class="b_top_img">
     <div id="bt_img1"><img src="https://picsum.photos/960/500" alt=""></div>
     <div id="bt_img2"><img src="https://picsum.photos/480/250" alt=""></div>
     <div id="bt_img3"><img src="https://picsum.photos/480/250" alt=""></div>
     <div id="bt_img4"><img src="https://picsum.photos/480/250" alt=""></div>
     <div id="bt_img5"><img src="https://picsum.photos/480/250" alt=""></div>
   </div>
-  <div class="booking">
-    <div class="booking_content">
-      <div class="booking_hot">
+  <div class="b">
+    <div class="b_content">
+      <div class="b_hot">
   
       </div>
-      <div class="booking_star">
+      <div class="b_star">
         
       </div>
-      <div class="booking_block">
+      <div class="b_block">
         <h1>빅 아일랜드 1일 투어_오하우섬 출발</h1>
         <h4>One Day Big Island Tour</h4>
         <p>지금까지 힐로를 중심적으로 선보였던 빅아일랜드 투어가 새롭게 태어납니다. 숨겨진 빅아일랜드의 아름다움을 저희와 함께 발견해 보세요! 빅아일랜드 투어의 하이라이트! 화산 국립 공원까지 즐길 수 있는 투어!</p>
       </div>
-      <div class="booking_block">
+      <div class="b_block">
         <h1>와이키키 호텔에서 편안하게 출발하는 화산섬 투어!! </h1>
         <h4>화산 활동으로 인해 삶과 죽음이 반복되며, 몸짐이 점점 커져가는 빅아일랜드!</h4>
         <p>하와이 섬 중에서 가장 마지막에 생성된 섬! 유네스코 지정 세계 생물권 보호지역이며 세계문화유산에 속하는 하와이  화산 국립공원! 두 개의 극지방 기후대를 제외한 지구상의 모~든 기후대를 가지고 있어 열대 우림,화산 사막,눈 덮인 산봉우리, 아름다운 흑사 해변에 이르기 까지 다양~한 자연을 만나실 수 있습니다. 꿈인지 현실인지 구분이 안갈만큼 경외로운 그 곳 '빅아일랜드' 에서 평생 잊지 못할 대자연의 감동을 느껴보세요.</p>
       </div>
-      <div class="booking_block">
+      <div class="b_block">
   
       </div>
-      <div class="booking_block">
+      <div class="b_block">
         <h1>요약정보</h1>
-        <table class="booking_table" border="1">
+        <table class="b_table" border="1">
           <tr>
             <td>운영일</td>
             <td>매일(일요일/ 수요일 제외)</td>
@@ -78,24 +78,28 @@
         </table>
       </div>
     </div>
-    <div class="booking_sidebar">
+
+    <!-- sidebar 영역 -->
+    <div class="b_s">
       <form action="#">
-        <h3>예약하기</h3>
-        <div>
+        <div  class="b_s_block">
+          <h3>예약하기</h3>
+        </div>
+        <div class="b_s_block">
           <h6>빅아일랜드 1일 투어_오아후 출발</h6>
         </div>
-        <div class="booking_sidebar_block">
-          <select class="booking_sidebar_long" name="" id="">
+        <div class="b_s_block">
+          <select class="b_s_long" name="" id="">
             <option value="op01">빅 아일랜드 1일투어 (현지 코나 공항 조인)</option>
             <option value="op02">빅 아일랜드 1일 투어 (호텔픽업+당일 왕복항공권)</option>
           </select>
         </div>
-        <div class="booking_sidebar_block">
-          <select class="booking_sidebar_short" name="" id="">
+        <div class="b_s_block">
+          <select class="b_s_short" name="" id="">
             <option value="op01">버스</option>
             <option value="op02">텍시</option>
           </select>
-          <select class="booking_sidebar_short" name="" id="">
+          <select class="b_s_short" name="" id="">
             <option value="op01">9:00</option>
             <option value="op01">9:30</option>
             <option value="op02">10:00</option>
@@ -104,10 +108,10 @@
             <option value="op03">11:30</option>
           </select>
         </div>
-        <div class="booking_sidebar_block">
+        <div class="b_s_block">
           <div><input type="date" id="b_s_date"></div>
         </div>
-        <div class="booking_sidebar_block">
+        <div class="b_s_block">
           <div><p>총계: XX$</p></div>
           <div><p>모든 결제는 USD 미화 달러로 결제가 진행됩니다. 상기 원화 금액의 경우, 실제 결제가 이루어지는 금액이 아닌 미화 달러의 금액적인 이해를 돕기위해 표시되는 내용인 점 참고 부탁드립니다.</p></div>
           <div>
