--- a/index.html
+++ b/index.html
@@ -8,38 +8,42 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<<<<<<< HEAD
-  <nav class="header">
+  <nav class="navbar">
     <ol>
-      <li class="menu1"><i class="fas fa-plane-departure"></i> Busan Tour </li>
-      <li class="menu2">
+      <li class="logo"><i class="fas fa-plane-departure"></i></li>
+      <li class="brandlogo">Busan Tour</li>
+      <li class="search">
         <input type="search" size="40px" name="text" id="" placeholder="search">
         <input type="submit" value="🔍">
       </li>
-      <li class="menu3"><i class="fas fa-user"></i></li>
+      <li class="member"><i class="fas fa-user"></i></li>
     </ol>
   </nav>
 
   <iframe class="video" src="https://www.youtube.com/embed/NaEqgQhp2Zo?si=-HBRlhE593iydicB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" allowfullscreen></iframe>
-
-  <div class="img">
-    <p class="img01"><img src="img/spring_main.jpg" alt=""> </p>
-    <p class="p01">부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
-    <p class="img02"><img src="img/summer_main.jpg" alt="">설명</p>
-    <p class="img01"><img src="img/autumn_main.jpg" alt="">설명</p>
-    <p class="img02"><img src="img/winter_main.jpg" alt="">설명</p>
-  </div>
-
-  <footer>`
-    <hr>
-  </footer>
   
-=======
-  <i class="fa-solid fas fa-plane fa-10x" ></i>
-  <a href="/main/login.html"><input type="button" value="로그인"></a>
-  <a href="/main/joinning.html"><input type="button" value="회원가입"></a>
-
-
->>>>>>> 4533da4a4eb24e8a6b5e77cd6e424f05819b131a
+  <main class="container">
+    <section class="spring_autumn">
+      <img src="img/spring_main.jpg" alt="">
+      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+    </section>
+    <section class="summer_winter">
+      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+      <img src="img/summer_main.jpg" alt="">
+    </section>
+    <section class="spring_autumn">
+      <img src="img/autumn_main.jpg" alt="">
+      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+    </section>
+    <section class="summer_winter">
+      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+      <img src="img/winter_main.jpg" alt="">
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer-content">
+      <p class="footer-text">저작권 © 2024. 모든 권리 보유.</p>
+    </div>
+  </footer>
 </body>
 </html>
