--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
         <input type="search" size="40px" name="text" id="" placeholder="search">
         <input type="submit" value="🔍">
       </li>
-      <li class="member"><i class="fas fa-user"></i></li>
+      <li class="member"><i class="fas fa-user"></i>
+      <!-- <a href="/main/login.html"><input type="button" value="로그인"></a>
+      <a href="/main/joinning.html"><input type="button" value="회원가입"></a> -->
+      </li>
     </ol>
   </nav>
-  <title>Document</title>
-</head>
-<body>
-
-  <!-- <a href="/main/login.html"><input type="button" value="로그인"></a>
-  <a href="/main/joinning.html"><input type="button" value="회원가입"></a> -->
-
-  <iframe class="video" src="https://www.youtube.com/embed/NaEqgQhp2Zo?si=-HBRlhE593iydicB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" allowfullscreen></iframe>
+  <div class="slideshow-container">
+    <img class="slide" src="img/winter_gangalri.jpg" alt="이미지 1">
+    <img class="slide" src="img/spring_main.jpg" alt="이미지 2">
+    <img class="slide" src="img/winter_gamchon.jpg" alt="이미지 3">
   
+    <a class="prev" onclick="changeSlide(-1)"></a>
+    <a class="next" onclick="changeSlide(1)"></a>
+  </div>
+
   <main class="container">
     <section class="spring_autumn">
       <img src="img/spring_main.jpg" alt="">
