joining & joinging completed_im5

--- a/main/joinging_completed.html
+++ b/main/joinging_completed.html
@@ -6,7 +6,12 @@
   <title>Document</title>
 <style>
 
+.joinging_completed_reset{
+text-align: center;
 
+
+
+}
 
 * {
 
@@ -50,7 +55,12 @@ padding: 700px 400px;
 </style>
 </head>
 <body>
-  <h1>회원 가입을 진심으로 축하 드립니다</h1>
+  <div class="joinging_completed_reset">
+    <h1>회원 가입을 진심으로 축하 드립니다</h1>
+  <a href="/index.html"><input type="button">홈으로</a>
+    
+  </div>
+
   
 </body>
 </html>
