booking 페이지 수정_lee

--- a/season/booking.html
+++ b/season/booking.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>b</title>
+  <title>booking</title>
   <link rel="stylesheet" href="css/booking.css">
-  <script src="https://kit.fontawesome.com/383b0a4783.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/383b0a4783.js" crossorigin="anonymous">
+  </script>
 </head>
 <body>
   <!-- 상단 img 영역 -->
@@ -92,7 +93,7 @@
       <form action="#">
         <div  class="b_s_block">
           <h2>예약하기</h2>
-          <p class="b_alert_red">현재 비 로그인 상태 입니다. 비회원으로 계속 진행을 원하시는 경우에는 '예약하기' 버튼을 눌러주세요. 이미 가입하신 경우 <a href="">로그인</a>을 해주세요!</p>
+          <p class="b_alert_red">현재 비 로그인 상태 입니다. 비회원으로 계속 진행을 원하시는 경우에는 '예약하기' 버튼을 눌러주세요. 이미 가입하신 경우 <a href="../main/login.html" style="font-weight: bold; text-decoration: underline; color: rgb(255, 100, 100);">로그인</a>을 해주세요!</p>
         </div>
         <div class="b_s_block">
           <h4>빅아일랜드 1일 투어_오아후 출발</h4>
