--- a/season/winter.html
+++ b/season/winter.html
@@ -7,7 +7,7 @@
   <title>season page</title>
 </head>
 <style>
-  header{
+   header{
     top: 0%; left: 0%; right: 0%;
     background:url("../img/winter_bg.jpg");
     background-repeat: repeat-x; 
@@ -22,7 +22,7 @@
 <header>
     <div class="title">
       <h1>겨울</h1>
-      <p>겨울에 가만할 곳과 축제에 대해서 알아보자</p>
+      <p>겨울에 갈만할 곳과 축제에 대해서 알아보자</p>
     </div>
   
     <div class="nav_container">
