--- a/season/winter.html
+++ b/season/winter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/season.css">
+  <link rel="stylesheet" href="css/winter.css">
   <title>season page</title>
 </head>
 <style>
