main완료,summer시작_min

--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
       <a href="/main/joinning.html"><input type="button" value="회원가입"></a> -->
       </li>
     </ol>
-  </nav>
-  <div class="slideshow-container">
-    <img class="slide" src="img/winter_gangalri.jpg" alt="이미지 1">
-    <img class="slide" src="img/spring_main.jpg" alt="이미지 2">
-    <img class="slide" src="img/winter_gamchon.jpg" alt="이미지 3">
+  </nav> <br>
   
-    <a class="prev" onclick="changeSlide(-1)"></a>
-    <a class="next" onclick="changeSlide(1)"></a>
+  <div class="slideshow-container">
+    <img class="slide" src="img/slideshow01.jpg" alt="이미지 1">
+    <img class="slide" src="img/slideshow02.jpg" alt="이미지 2">
+    <img class="slide" src="img/slideshow03.jpg" alt="이미지 3">
   </div>
-
+  
   <main class="container">
     <section class="spring_autumn">
       <img src="img/spring_main.jpg" alt="">
