--- a/main/login.html
+++ b/main/login.html
@@ -45,6 +45,12 @@
             color: white;
         }
 
+        #btn2 {
+            background-color: #1BBC9B;
+            margin-bottom: 30px;
+            color: white;
+        }
+
         a {
             text-decoration: none;
             color: #9B9B9B;
@@ -72,6 +78,7 @@
             </div>
                 
             <input type="submit" id="btn" value="로그인">
+            <a href="/main/joinning.html"><input type="button" id="btn2" value="회원가입"></a>
         </form>
         <a href="#none">비밀번호를 잊어버리셨나요?</a>
         <p><a href="/main/joinning.html">계정이 없으신가요?</a></p>
