--- a/season/booking.html
+++ b/season/booking.html
@@ -11,11 +11,11 @@
 <body>
   <!-- 상단 img 영역 -->
   <div class="b_top_img">
-    <div id="bt_img1"><img src="https://picsum.photos/960/500" alt=""></div>
-    <div id="bt_img2"><img src="https://picsum.photos/480/250" alt=""></div>
-    <div id="bt_img3"><img src="https://picsum.photos/480/250" alt=""></div>
-    <div id="bt_img4"><img src="https://picsum.photos/480/250" alt=""></div>
-    <div id="bt_img5"><img src="https://picsum.photos/480/250" alt=""></div>
+    <div id="bt_img1"><img src="../img/slideshow01.jpg" alt=""></div>
+    <div id="bt_img2"><img src="../img/slideshow02.jpg" alt=""></div>
+    <div id="bt_img3"><img src="../img/slideshow03.jpg" alt=""></div>
+    <div id="bt_img4"><img src="../img/slideshow03.jpg" alt=""></div>
+    <div id="bt_img5"><img src="../img/slideshow02.jpg" alt=""></div>
   </div>
 
   <!-- 본문 -->
@@ -32,13 +32,13 @@
         <i class="fa-regular fa-star"></i>
       </div>
       <div class="b_block">
-        <h1>빅 아일랜드 1일 투어_오하우섬 출발</h1>
-        <h4>One Day Big Island Tour</h4>
+        <h1>부산역출발야경투어(2층 버스 야경투어)</h1>
+        <h4>광안리 밤바다의 풍광과 바다 위에서 내려다보는 부산의 환상적인 야경</h4>
         <p>지금까지 힐로를 중심적으로 선보였던 빅아일랜드 투어가 새롭게 태어납니다. 숨겨진 빅아일랜드의 아름다움을 저희와 함께 발견해 보세요! 빅아일랜드 투어의 하이라이트! 화산 국립 공원까지 즐길 수 있는 투어!</p>
       </div>
       <div class="b_block">
-        <h1>와이키키 호텔에서 편안하게 출발하는 화산섬 투어!! </h1>
-        <h4>화산 활동으로 인해 삶과 죽음이 반복되며, 몸짐이 점점 커져가는 빅아일랜드!</h4>
+        <h1>역사테마 </h1>
+        <h4>유서깊은 역사와 문화의 고장 부산의 과거, 현재 그리고 미래를 담아보는 여행</h4>
         <p>하와이 섬 중에서 가장 마지막에 생성된 섬! 유네스코 지정 세계 생물권 보호지역이며 세계문화유산에 속하는 하와이  화산 국립공원! 두 개의 극지방 기후대를 제외한 지구상의 모~든 기후대를 가지고 있어 열대 우림,화산 사막,눈 덮인 산봉우리, 아름다운 흑사 해변에 이르기 까지 다양~한 자연을 만나실 수 있습니다. 꿈인지 현실인지 구분이 안갈만큼 경외로운 그 곳 '빅아일랜드' 에서 평생 잊지 못할 대자연의 감동을 느껴보세요.</p>
       </div>
       <div class="b_block">
@@ -100,14 +100,15 @@
         </div>
         <div class="b_s_block">
           <select class="b_s_long" name="" id="">
-            <option value="op01">빅 아일랜드 1일투어 (현지 코나 공항 조인)</option>
-            <option value="op02">빅 아일랜드 1일 투어 (호텔픽업+당일 왕복항공권)</option>
+            <option value="op01">부산역출발야경투어(2층 버스 야경투어)</option>
+            <option value="op02">역사테마</option>
           </select>
         </div>
         <div class="b_s_block d_f space_btween ">
           <select class="b_s_short" name="" id="">
-            <option value="op01">버스</option>
-            <option value="op02">텍시</option>
+            <option value="op01">레드라인</option>
+            <option value="op02">블루라인</option>
+            <option value="op02">오렌지라인</option>
           </select>
           <select class="b_s_short" name="" id="">
             <option value="op01">9:00</option>
