Main_a link 연결_min

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         <input type="search" size="40px" name="text" id="" placeholder="search">
         <input type="submit" value="🔍">
       </li>
-      <li class="member"><i class="fas fa-user"></i>
-      <!-- <a href="/main/login.html"><input type="button" value="로그인"></a>
-      <a href="/main/joinning.html"><input type="button" value="회원가입"></a> -->
+      <li class="member">
+      <a href="/main/login.html"><i class="fas fa-user"></i></a>
       </li>
     </ol>
   </nav> <br>
@@ -31,20 +30,20 @@
   
   <main class="container">
     <section class="spring_autumn">
-      <img src="img/spring_main.jpg" alt="">
-      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+      <a href="season/spring.html"><img src="img/spring_main.jpg" alt=""></a>
+      <p><strong style="font-size: 30px; color: palevioletred;">봄</strong> 부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
     </section>
     <section class="summer_winter">
-      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
-      <img src="img/summer_main.jpg" alt="">
+      <p><strong style="font-size: 30px; color: orange;">여름</strong>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+      <a href="season/summer.html"><img src="img/summer_main.jpg" alt=""></a>
     </section>
     <section class="spring_autumn">
-      <img src="img/autumn_main.jpg" alt="">
-      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+      <a href="season/autumn.html"><img src="img/autumn_main.jpg" alt=""></a>
+      <p><strong style="font-size: 30px; color: rgb(223, 98, 52);">가을</strong>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
     </section>
     <section class="summer_winter">
-      <p>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
-      <img src="img/winter_main.jpg" alt="">
+      </a><p><strong style="font-size: 30px; color: rgb(228, 184, 101);">겨울</strong>부산의 봄은 3월이 되면 매화가 만개하고, 중순 이후 민들레가 핀다. 4월에 들어서면 복숭아꽃이 활짝 피고, 제비가 날아들며 개구리가 나온다. 봄에는 일교차가 매우 크고, 이상건조, 황사, 늦서리 같은 특수한 기상현상이 나타난다.</p>
+      <a href="season/winter.html"><img src="img/winter_main.jpg" alt=""></a>
     </section>
   </main>
   <footer class="footer">
