--- a/season/summer.html
+++ b/season/summer.html
@@ -28,10 +28,10 @@
     <div class="nav_container">
       <nav class="nav">
       <ul>
-        <li><a href="#">봄</a></li>
-        <li><a href="#">여름</a></li>
-        <li><a href="#">가을</a></li>
-        <li><a href="#">겨울</a></li>            
+        <li><a href="spring.html">봄</a></li>
+        <li><a href="summer.html">여름</a></li>
+        <li><a href="autumn.html">가을</a></li>
+        <li><a href="winter.html">겨울</a></li>         
       </ul>    
       </nav>
     </div>
