login_joingings_im

--- a/main/login.html
+++ b/main/login.html
@@ -11,7 +11,7 @@
         }
 
         body {      
-            background-color: #1BBC9B;
+            background-color: #b3d7e5 ;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -40,13 +40,13 @@
         }
 
         #btn {
-            background-color: #1BBC9B;
+            background-color: rgb(127, 184, 207);
             margin-bottom: 30px;
             color: white;
         }
 
         #btn2 {
-            background-color: #1BBC9B;
+            background-color: rgb(127, 184, 207);
             margin-bottom: 30px;
             color: white;
         }
