index nav 수정_lss

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
   <nav class="navbar">
     <ol>
-      <li class="logo"><i class="fas fa-plane-departure"></i></li>
-      <li class="brandlogo">Busan Tour</li>
+      <div class="logobox">
+        <li class="logo"><i class="fas fa-plane-departure"></i></li>
+        <li class="brandlogo">Busan Tour</li>
+      </div class="logobox">
       <li class="search">
         <input type="search" size="40px" name="text" id="" placeholder="search">
         <input type="submit" value="🔍">
