--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <ol>
       <div class="logobox">
-        <li class="logo"><i class="fas fa-plane-departure"></i></li>
+        <li class="logo"><img src="img/logo_main.gif" width="30px" alt=""></li>
         <li class="brandlogo">Busan Tour</li>
       </div class="logobox">
       <li class="search">
@@ -29,7 +29,6 @@
     <img class="slide" src="img/slideshow02.jpg" alt="이미지 2">
     <img class="slide" src="img/slideshow03.jpg" alt="이미지 3">
   </div>
-  
   <main class="container">
     <section class="spring_autumn">
       <a href="season/spring.html"><img src="img/spring_main.jpg" alt=""></a>
