--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <ol>
       <div class="logobox">
-        <li class="logo"><img src="img/logo_main.gif" width="30px" alt=""></li>
+        <li class="logo"><img src="img/logo_main.gif" width="30px" height="30px" alt=""></li>
         <li class="brandlogo">Busan Tour</li>
       </div class="logobox">
       <li class="search">
