--- a/season/winter.html
+++ b/season/winter.html
@@ -9,12 +9,12 @@
 <style>
    header{
     top: 0%; left: 0%; right: 0%;
-    background:url("../img/winter_bg.jpg");
-    background-repeat: repeat-x; 
+    background:url("../img/winter_size.jpg");
+    background-repeat: no-repeat; 
     background-attachment: scroll;
     background-size: cover;
     /* background-position: center; */
-    background-size: 8% auto;
+    background-size: 100% auto;
   }
 </style>
 <body>
@@ -43,7 +43,8 @@
     <div id="'wrapper1">
       <div class="box1">
         <div class="box1-left">
-          <img id="img-left" src="../img/winter_songdo.jpg" width="250" height="250">
+          <img id="img-left" src="../img/winter_songdo.jpg" width="400" height="250">
+          <img id="img-left" src="../img/winter_songdo2.jpg" width="420" height="250">
           <!-- <div class="caption1">
             <h2>상품1</h2>
           </div> -->
@@ -101,7 +102,7 @@
     <div id="wrapper3">
       <div class="box3">
         <div class="box3-left">
-          <img id="img-left" src="../img/winter_gangalri.jpg" width="350" height="250">
+          <img id="img-left" src="../img/winter_gangalri.jpg" width="420" height="250">
           <!-- <div class="caption3">
             <h2>상품3</h2>
           </div> -->
