--- a/season/summer.html
+++ b/season/summer.html
@@ -21,8 +21,8 @@
 
 <header>
     <div class="title">
-      <h1>여름</h1>
-      <p>여름에 갈 만할 곳과 축제에 대해서 알아보자</p>
+      <h1 style="color: rgb(242, 177, 57);">여름</h1>
+      <p style="color: rgb(229, 157, 24);"></p>>여름에 갈 만할 곳과 축제에 대해서 알아보자</p>
     </div>
   
     <div class="nav_container">
