--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="submit" value="🔍">
       </li>
       <li class="member">
-      <a href="main/login.html"><i class="fas fa-user"></i></a>
+      <a href="./main/login.html"><i class="fas fa-user"></i></a>
       </li>
     </ol>
   </nav> <br>
