--- a/main/login.html
+++ b/main/login.html
@@ -78,10 +78,10 @@
             </div>
                 
             <input type="submit" id="btn" value="로그인">
-            <a href="/main/joinning.html"><input type="button" id="btn2" value="회원가입"></a>
+            <a href="joinning.html"><input type="button" id="btn2" value="회원가입"></a>
         </form>
         <a href="#none">비밀번호를 잊어버리셨나요?</a>
-        <p><a href="/main/joinning.html">계정이 없으신가요?</a></p>
+        <p><a href="joinning.html">계정이 없으신가요?</a></p>
     </div>
     
 </body>
