--- a/main/login.html
+++ b/main/login.html
@@ -79,6 +79,7 @@
                 
             <input type="submit" id="btn" value="로그인">
             <a href="joinning.html"><input type="button" id="btn2" value="회원가입"></a>
+            <a href="../index.html"><input type="button" id="btn2" value="홈으로"></a>
         </form>
         <a href="#none">비밀번호를 잊어버리셨나요?</a>
         <p><a href="joinning.html">계정이 없으신가요?</a></p>
