--- a/main/joinging_completed.html
+++ b/main/joinging_completed.html
@@ -42,7 +42,7 @@ body {
   
   
   
-  background: url('/img/joinging_congratulation.jpg') no-repeat center;
+  background: url(../img/joinging_congratulation.jpg) no-repeat center;
   background-size: cover;
   width: 550px;
   height: 100px;
@@ -63,7 +63,7 @@ body {
 
 @media screen and (max-width:768px)                       {
   body{
-background: url(/img/joinging_congratulation2.jpg) no-repeat fixed;
+background: url(../img/joinging_congratulation2.jpg) no-repeat fixed;
 background-size: cover;
 
 
@@ -71,7 +71,7 @@ background-size: cover;
 }
   @media screen and (max-width:426px)                       {
     body{
-  background: url(/img/joinging_congratulation3.jpg) no-repeat fixed;
+  background: url(../img/joinging_congratulation3.jpg) no-repeat fixed;
   background-size: cover;
   
   
@@ -122,6 +122,8 @@ background-size: cover;
 
 </style>
 </head>
+
+
 <body>
 
 
