--- a/main/joinging_completed.html
+++ b/main/joinging_completed.html
@@ -129,7 +129,7 @@ background-size: cover;
 
   <div class="joinging_completed_reset">
     <h1>회원 가입을 진심으로 축하 드립니다</h1>
-  <a href="/index.html"><input type="button">홈으로</a>
+  <a href="../index.html"><input type="button">홈으로</a>
     </div>
 
   
