--- a/main/joinning.html
+++ b/main/joinning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Joining Form</title>
-   
+   <link rel="stylesheet" href="joinning.css">
 </head>
 
 <body>
