--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <ol>
+    <ol class="navmenu">
       <div class="logobox">
         <li class="logo"><img src="img/logo_main.gif" width="22px" height="22px" alt=""></li>
         <li class="brandlogo">Busan Tour</li>
@@ -19,7 +19,7 @@
         <input type="submit" value="🔍">
       </li>
       <li class="member">
-      <a href="./main/login.html"><i class="fas fa-user"></i></a>
+      <a href="./main/login.html"><i class="fas fa-user" ></i></a>
       </li>
     </ol>
   </nav> <br>
